--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,7 +13,6 @@ html {
 .banner {
   display: flex;
   flex-flow: column nowrap;
-  background-color: rgba(21, 222, 165, 0.5607843137);
 }
 .banner__containerTop {
   font-family: "Gloock", serif;
@@ -22,9 +21,11 @@ html {
   height: 5rem;
   width: 100%;
   flex-flow: row nowrap;
-  background-color: rgba(21, 222, 165, 0.5607843137);
+  background-color: #f7f7f7;
   align-items: center;
   justify-content: space-around;
+  box-shadow: 0px 8px 0px 1px rgba(0, 0, 0, 0.05);
+  z-index: 1;
 }
 .banner__containerTop__buttonLangue {
   padding: 1rem 2rem;
@@ -36,8 +37,10 @@ html {
   height: 5rem;
   width: 100%;
   flex-flow: row nowrap;
-  background-color: rgba(244, 254, 251, 0.5607843137);
+  background-color: #ffec3a;
   align-items: center;
+  border: solid;
+  border-width: 1px;
   justify-content: center;
 }
 .banner__containerBottom__img {
@@ -48,7 +51,7 @@ html {
 }
 
 section {
-  background-color: #eaeaea;
+  background-color: #f7f7f7;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
@@ -59,21 +62,22 @@ section {
 }
 
 footer {
-  background-color: rgba(21, 222, 165, 0.5607843137);
+  background-color: #ffec3a;
 }
 
 .personnage {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: xx-large;
   font-weight: bold;
+  border: solid;
+  border-width: 1px;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   gap: 25px;
   padding: 5% 0 5% 0;
-  background-color: rgba(21, 222, 165, 0.5607843137);
-  border: solid;
-  border-radius: 15px;
+  background-color: #ffec3a;
+  box-shadow: 0px 14px 0px 1px rgba(0, 0, 0, 0.1);
 }
 
 .stat, .personnage {
@@ -87,17 +91,17 @@ footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  -moz-column-gap: 100px;
-       column-gap: 100px;
+  column-gap: 100px;
 }
 .console__button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: xx-large;
   font-weight: bold;
-  color: #eaeaea;
+  border: solid;
+  border-width: 1px;
+  color: black;
   margin: 25px;
   padding: 2rem 8rem;
-  border-radius: 25px;
 }
 .console__button--left {
   background-color: #c31313;
@@ -106,7 +110,7 @@ footer {
   background-color: #050f8b;
 }
 .console__button--random {
-  background-color: rgba(21, 222, 165, 0.5607843137);
+  background-color: #ffec3a;
 }
 
 .sideButton {
@@ -114,6 +118,6 @@ footer {
   right: 18%;
   top: 35%;
   overflow-x: hidden;
-  background-color: rgba(21, 222, 165, 0.5607843137);
+  background-color: #ffec3a;
   padding: 8rem 2rem;
 }/*# sourceMappingURL=index.css.map */
