--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -1,4 +1,4 @@
-$color-primary: #15dea58f;
+$color-primary: #ffec3a;
 $color-secondary: #f7f7f7 ;
 $color-gauche: #c31313;
 $color-droite: #050f8b;
@@ -13,6 +13,11 @@ $color-droite: #050f8b;
 
 @mixin bg($colour){
     background-color: $colour;
+}
+
+@mixin border{
+    border: solid;
+    border-width: 1px;
 }
 
 @mixin bannerColorAndSize($color){
@@ -46,16 +51,18 @@ html{
 .banner{
     display: flex;
     flex-flow: column nowrap;
-    background-color: $color-primary;
         &__containerTop{
-            @include bannerColorAndSize($color-primary);
+            @include bannerColorAndSize($color-secondary);
             justify-content:space-around;
+            box-shadow: 0px 8px 0px 1px rgba(0,0,0,0.05);
+            z-index: 1;
                 &__buttonLangue{
                     padding: 1rem 2rem;
                 }
         }
         &__containerBottom{
-            @include bannerColorAndSize(lighten($color-primary,50%));
+            @include bannerColorAndSize($color-primary);
+            @include border;
             justify-content: center;
             &__img{
                 margin: 0 10px 0 10px;
@@ -68,7 +75,7 @@ html{
 
 
 section{
-    background-color: darken($color-secondary,5%);
+    background-color: $color-secondary;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
 }
@@ -84,14 +91,14 @@ footer{
 
 .personnage{
     @include font;
+    @include border;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     gap: 25px;
     padding: 5% 0 5% 0;
     background-color: $color-primary;
-    border: solid;
-    border-radius: 15px;
+    box-shadow: 0px 14px 0px 1px rgba(0,0,0,0.1);
 }
 
 .stat, .personnage{
@@ -106,11 +113,11 @@ footer{
     column-gap: 100px;
     &__button{
         @include font;
-        color:darken($color-secondary,5%);
+        @include border;
+        color: black;
         margin: 25px;
         padding: 2rem 8rem;
-        border-radius: 25px;
-            &--left{
+        &--left{
                 @include bg($color-gauche)
             }
             &--right{
