--- a/public/css/index.css
+++ b/public/css/index.css
@@ -83,6 +83,8 @@ footer {
   padding: 5% 0 5% 0;
   background-color: #ffec3a;
   box-shadow: 0px 14px 0px 1px rgba(0, 0, 0, 0.1);
+  text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
+  color: #f7f7f7;
 }
 
 .stat, .personnage {
