--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -104,6 +104,8 @@ footer{
     padding: 5% 0 5% 0;
     background-color: $color-primary;
     box-shadow: 0px 14px 0px 1px rgba(0,0,0,0.1);
+    text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
+    color: $color-secondary;
 }
 
 .stat, .personnage{
