--- a/public/css/index.css
+++ b/public/css/index.css
@@ -61,11 +61,6 @@ section {
   grid-template-columns: repeat(12, 1fr);
 }
 
-.logo {
-  width: 4rem;
-  height: 4rem;
-}
-
 footer {
   background-color: #ffec3a;
 }
@@ -86,6 +81,9 @@ footer {
   text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
   color: #f7f7f7;
 }
+.personnage__img {
+  max-width: 100%;
+}
 
 .stat, .personnage {
   margin: 10% 0 10% 0;
@@ -100,6 +98,11 @@ footer {
   justify-content: center;
   column-gap: 100px;
 }
+@media screen and (max-width: 768px) {
+  .console {
+    grid-column: 2/12;
+  }
+}
 .console__button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: xx-large;
@@ -111,6 +114,14 @@ footer {
   box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
   margin: 25px;
   padding: 2rem 8rem;
+}
+@media screen and (max-width: 768px) {
+  .console__button {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 5px;
+    padding: 1rem 3rem;
+  }
 }
 .console__button--left {
   background-color: #ff5649;
