--- a/public/sass/index.scss
+++ b/public/sass/index.scss
@@ -37,6 +37,44 @@ $color-droite: #1f48f7;
     font-weight: bold;
 }
 
+$breakpoints: (
+    xs : 576px,
+    s : 768px,
+    m : 992px,
+    l : 1200px,
+    xl : 1400px,
+);
+
+@mixin xs {
+    @media screen and (max-width: map-get($map: $breakpoints, $key: xs)){
+        @content;
+    }
+}
+
+@mixin s {
+    @media screen and (max-width: map-get($map: $breakpoints, $key: s)){
+        @content;
+    }
+}
+
+@mixin m {
+    @media screen and (max-width: map-get($map: $breakpoints, $key: m)){
+        @content;
+    }
+}
+
+@mixin l {
+    @media screen and (max-width: map-get($map: $breakpoints, $key: l)){
+        @content;
+    }
+}
+
+@mixin xl {
+    @media screen and (max-width: map-get($map: $breakpoints, $key: xl)){
+        @content;
+    }
+}
+
 html{
     height: 100%;
     width: 100%;
@@ -85,11 +123,6 @@ section{
     grid-template-columns: repeat(12, 1fr);
 }
 
-.logo{
-    width: 4rem;
-    height: 4rem;
-}
-
 footer{
     background-color: $color-primary;
 }
@@ -106,6 +139,9 @@ footer{
     box-shadow: 0px 14px 0px 1px rgba(0,0,0,0.1);
     text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
     color: $color-secondary;
+        &__img{
+            max-width: 100%;
+        }
 }
 
 .stat, .personnage{
@@ -113,12 +149,21 @@ footer{
 }
 
 .console{
+    @include s {
+        grid-column: 2/12;
+    };
     grid-column: 4/10;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     column-gap: 100px;
     &__button{
+        @include s {
+            display: flex;
+            flex-flow: row wrap;    
+            margin: 5px;
+            padding: 1rem 3rem;
+        };
         @include font;
         @include border;
         color: $color-secondary;
