--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Gloock&family=PT+Serif&display=swap");
 html {
   height: 100%;
@@ -94,16 +95,34 @@ footer {
 .console {
   grid-column: 4/10;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
+  -moz-column-gap: 100px;
+       column-gap: 100px;
+}
+.console__containerTop {
+  display: flex;
+  flex-flow: row nowrap;
   justify-content: center;
-  column-gap: 100px;
 }
-@media screen and (max-width: 768px) {
-  .console {
-    grid-column: 2/12;
-  }
+.console__containerTop__button {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: xx-large;
+  font-weight: bold;
+  border: solid;
+  border-width: 1px;
+  color: #f7f7f7;
+  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
+  margin: 25px;
+  padding: 2rem 8rem;
+  background-color: #ffec3a;
 }
-.console__button {
+.console__containerBottom {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+.console__containerBottom__button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: xx-large;
   font-weight: bold;
@@ -115,24 +134,14 @@ footer {
   margin: 25px;
   padding: 2rem 8rem;
 }
-@media screen and (max-width: 768px) {
-  .console__button {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 5px;
-    padding: 1rem 3rem;
-  }
-}
-.console__button--left {
+.console__containerBottom__button--left {
   background-color: #ff5649;
 }
-.console__button--right {
+.console__containerBottom__button--right {
   background-color: #1f48f7;
 }
-.console__button--random {
-  background-color: #ffec3a;
-}
 
+/* si besoin de rajouter un bouton suivant sur le côté */
 .sideButton {
   position: absolute;
   right: 18%;
