--- a/front/public/css/index.css
+++ b/front/public/css/index.css
@@ -11,6 +11,23 @@ html {
   padding: 0;
 }
 
+body {
+  background-image: radial-gradient(circle at center, black 0.1rem, transparent 0), radial-gradient(circle at center, black 0.1rem, transparent 0);
+  background-size: 1.3rem 1.3rem;
+  background-position: 0 0, 0.65rem 0.65rem;
+  background-color: #f2f2f2;
+  z-index: 0;
+}
+
+section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+footer {
+  background-color: #ffec3a;
+}
+
 .banner {
   display: flex;
   flex-flow: column nowrap;
@@ -60,16 +77,6 @@ html {
 .banner__containerBottom__a__img {
   margin: 0 5px 0 5px;
   width: 40%;
-}
-
-section {
-  background-color: #f7f7f7;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-}
-
-footer {
-  background-color: #ffec3a;
 }
 
 .personnage {
