--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -80,16 +80,13 @@ footer {
 }
 
 .personnage {
+  height: 300px;
+  width: 300px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: xx-large;
   font-weight: bold;
   border: solid;
   border-width: 1px;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  gap: 25px;
-  padding: 5% 0 5% 0;
   background-color: #ffec3a;
   box-shadow: 0px 14px 0px 1px rgba(0, 0, 0, 0.1);
   text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
@@ -97,6 +94,7 @@ footer {
 }
 .personnage__img {
   max-width: 100%;
+  max-height: 75%;
 }
 
 .stat, .personnage {
