--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -148,19 +148,17 @@ footer{
 }
 
 .personnage{
+    height: 300px;
+    width: 300px;
     @include font;
     @include border;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    gap: 25px;
-    padding: 5% 0 5% 0;
     background-color: $color-primary;
     box-shadow: 0px 14px 0px 1px rgba(0,0,0,0.1);
     text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
     color: $color-secondary;
         &__img{
             max-width: 100%;
+            max-height: 75%
         }
 }
 
