--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -12,6 +12,8 @@ html {
 }
 
 body {
+  max-width: 100%;
+  max-height: 100%;
   background-image: radial-gradient(circle at center, black 0.1rem, transparent 0), radial-gradient(circle at center, black 0.1rem, transparent 0);
   background-size: 1.3rem 1.3rem;
   background-position: 0 0, 0.65rem 0.65rem;
@@ -93,6 +95,7 @@ footer {
   color: #f7f7f7;
 }
 .personnage__img {
+  padding-top: 10px;
   max-width: 100%;
   max-height: 75%;
 }
