--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -96,6 +96,8 @@ html{
 }
 
 body{
+    max-width: 100%;
+    max-height: 100%;
     background-image: radial-gradient(
         circle at center,
         black 0.1rem,
@@ -157,6 +159,7 @@ footer{
     text-shadow: -2px -1px black, 1px 2px black, 2px 1px black, -1px -2px black;
     color: $color-secondary;
         &__img{
+            padding-top: 10px;
             max-width: 100%;
             max-height: 75%
         }
