--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -224,3 +224,23 @@ footer{
     background-color: $color-primary;
     padding: 8rem 2rem;
   }
+
+  #a-tittle:link{
+    color: black;
+    text-decoration: none;
+  }
+
+  #a-tittle:active{
+    color: black;
+    text-decoration: none;
+  }
+
+  #a-tittle:visited{
+    color: black;
+    text-decoration: none;
+  }
+
+  #a-tittle:hover{
+    color: black;
+    text-decoration: none;
+  }
