--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -180,4 +180,24 @@ footer {
   overflow-x: hidden;
   background-color: #ffec3a;
   padding: 8rem 2rem;
+}
+
+#a-tittle:link {
+  color: black;
+  text-decoration: none;
+}
+
+#a-tittle:active {
+  color: black;
+  text-decoration: none;
+}
+
+#a-tittle:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#a-tittle:hover {
+  color: black;
+  text-decoration: none;
 }/*# sourceMappingURL=index.css.map */
