--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -11,6 +11,16 @@ html {
   padding: 0;
 }
 
+*:disabled {
+  background-color: black;
+  color: linen;
+  opacity: 0.8;
+}
+*:disabled:hover {
+  text-decoration: none;
+  opacity: 0.2;
+}
+
 body {
   max-width: 100%;
   max-height: 100%;
