--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -95,6 +95,16 @@ html{
     padding: 0;
 }
 
+*:disabled {
+    background-color: black;
+    color: linen;
+    opacity: 0.8;
+    &:hover{
+        text-decoration: none;
+        opacity: 0.2;
+    }
+}
+
 body{
     max-width: 100%;
     max-height: 100%;
