--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -40,6 +40,34 @@ footer {
   background-color: #ffec3a;
 }
 
+.container {
+  margin: 100px auto;
+  width: 500px;
+  text-align: center;
+}
+
+.progress2 {
+  padding: 0px;
+  border-radius: 10px;
+  background: #2049f7;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+
+.progress-bar2 {
+  height: 40px;
+  border-radius: 10px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  transition: 0.4s linear;
+  transition-property: width, background-color;
+}
+
+.progress-moved .progress-bar2 {
+  width: 85%;
+  background-color: #ff5649;
+  animation: progressAnimation 6s;
+}
+
 .banner {
   display: flex;
   flex-flow: column nowrap;
@@ -91,6 +119,16 @@ footer {
   width: 40%;
 }
 
+.votingCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.votingCard > div {
+  height: 60%;
+  width: 20%;
+}
+
 .personnage {
   height: 300px;
   width: 300px;
@@ -117,6 +155,7 @@ footer {
 }
 
 .console {
+  height: 30%;
   grid-column: 4/10;
   display: flex;
   flex-flow: column wrap;
@@ -160,7 +199,7 @@ footer {
   color: #f7f7f7;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
   box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
-  margin: 25px;
+  margin: 50px;
   padding: 2rem 8rem;
 }
 .console__containerBottom__button--left {
