--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -2,6 +2,8 @@ $color-primary: #ffec3a;
 $color-secondary: #f7f7f7 ;
 $color-gauche: #ff5649;
 $color-droite: #1f48f7;
+$background: #2c303a;
+
 
 @import url('https://fonts.googleapis.com/css2?family=Gloock&family=PT+Serif&display=swap');
 
@@ -128,6 +130,37 @@ footer{
     background-color: $color-primary;
 }
 
+.container {
+    margin: 100px auto;
+    width: 500px;
+    text-align: center;
+  }
+
+  .progress2 {
+    padding: 0px;
+    border-radius: 10px;
+    background: lighten($color: $color-droite, $amount: 0.3);  
+    background-image: 
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+  }
+  
+  .progress-bar2 {
+    height: 40px;
+    border-radius: 10px;
+    background-image: 
+      linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+    transition: 0.4s linear;  
+    transition-property: width, background-color;    
+  }
+  
+  .progress-moved .progress-bar2 {
+    width: 85%; 
+    background-color: $color-gauche;  
+    animation: progressAnimation 6s;
+  }
+
+
 .banner{
     display: flex;
     flex-flow: column nowrap;
@@ -159,6 +192,16 @@ footer{
         }
 }
 
+.votingCard{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &>div{
+        height: 60%;
+        width: 20%;
+    }
+}
+
 .personnage{
     height: 300px;
     width: 300px;
@@ -180,6 +223,7 @@ footer{
 }
 
 .console{
+    height: 30%;
     grid-column: 4/10;
     display: flex;
     flex-flow: column wrap;
@@ -210,7 +254,7 @@ footer{
             color: $color-secondary;
             text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
             box-shadow: 0px 8px 0px 0px rgba(0,0,0,0.1);
-            margin: 25px;
+            margin: 50px;
             padding: 2rem 8rem;
             &--left{
                 @include bg($color-gauche);
