--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -68,6 +68,16 @@ footer {
   animation: progressAnimation 6s;
 }
 
+@keyframes progressAnimation {
+  0% {
+    width: 5%;
+    background-color: #F9BCCA;
+  }
+  100% {
+    width: 85%;
+    background-color: #EF476F;
+  }
+}
 .banner {
   display: flex;
   flex-flow: column nowrap;
