--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -40,44 +40,21 @@ footer {
   background-color: #ffec3a;
 }
 
-.container {
-  margin: 100px auto;
-  width: 500px;
-  text-align: center;
-}
-
-.progress2 {
-  padding: 0px;
-  border-radius: 10px;
+.progress-container {
+  height: 0.8rem;
+  width: 32rem;
+  border-radius: 0.4rem;
   background: #2049f7;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
 }
 
-.progress-bar2 {
-  height: 40px;
-  border-radius: 10px;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
-  transition: 0.4s linear;
-  transition-property: width, background-color;
+.progress-container .progress {
+  height: 100%;
+  width: 0;
+  border-radius: 0.4rem;
+  background: #ff574a;
+  transition: width 0.4s ease-out;
 }
 
-.progress-moved .progress-bar2 {
-  width: 85%;
-  background-color: #ff5649;
-  animation: progressAnimation 6s;
-}
-
-@keyframes progressAnimation {
-  0% {
-    width: 5%;
-    background-color: #F9BCCA;
-  }
-  100% {
-    width: 85%;
-    background-color: #EF476F;
-  }
-}
 .banner {
   display: flex;
   flex-flow: column nowrap;
