--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Gloock&family=PT+Serif&display=swap");
 html {
   height: 100%;
@@ -143,6 +142,19 @@ footer {
   background-color: #1f48f7;
   padding: 1rem 4rem;
 }
+.statistics__statBox--nombreDeVote {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: xx-large;
+  font-weight: bold;
+  border: solid;
+  border-width: 1px;
+  color: #f7f7f7;
+  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
+  margin: 25px;
+  background-color: #ffec3a;
+  padding: 1rem 4rem;
+}
 
 .votingCard {
   display: flex;
@@ -244,16 +256,6 @@ footer {
 }
 .console__containerBottom__button--right:active {
   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-}
-
-/* si besoin de rajouter un bouton suivant sur le côté */
-.sideButton {
-  position: absolute;
-  right: 18%;
-  top: 35%;
-  overflow-x: hidden;
-  background-color: #ffec3a;
-  padding: 8rem 2rem;
 }
 
 #a-tittle:link {
