--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -164,8 +164,8 @@ footer {
 }
 
 .personnage {
-  height: 300px;
-  width: 300px;
+  height: 25vh;
+  width: 15vw;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: 3vw;
   font-weight: bold;
